[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/UI/Font Info.tres" type="DynamicFont" id=1]
[ext_resource path="res://Networking/Network_ui.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=20]
size = 70
outline_size = 13
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=22]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=24]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 22 )

[sub_resource type="DynamicFont" id=25]
size = 40
outline_size = 6
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 8 )

[sub_resource type="DynamicFont" id=26]
size = 70
outline_size = 13
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=27]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.333333, 0.333333, 0.372549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.698039, 0.458824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=15]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.333333, 0.333333, 0.372549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 0.698039, 0.458824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=10]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.333333, 0.333333, 0.372549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0.698039, 0.458824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=28]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.333333, 0.333333, 0.372549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 1, 0.698039, 0.458824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=33]
size = 30
outline_size = 10
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 8 )

[sub_resource type="Animation" id=34]
resource_name = "Enter a username"
tracks/0/type = "value"
tracks/0/path = NodePath("Info_Text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Enter a username", "Enter a username", "Enter a username" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info_Text:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=35]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Info_Text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info_Text:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.145098, 0.145098, 0.164706, 1 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "Server Disconnected"
tracks/0/type = "value"
tracks/0/path = NodePath("Info_Text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Server Disconnected" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info_Text:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=36]
resource_name = "connection_failed"
tracks/0/type = "value"
tracks/0/path = NodePath("Info_Text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Could not connect to server" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info_Text:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[node name="Network_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -537, 165 )
script = ExtResource( 2 )

[node name="Settings_panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -261.0
margin_right = 418.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 91, 168 )

[node name="Rocket Man2" type="Label" parent="Settings_panel"]
anchor_left = 0.0287081
anchor_top = 0.0325671
anchor_right = 0.95933
anchor_bottom = 0.224138
custom_colors/font_color = Color( 0.92549, 0.478431, 0.164706, 1 )
custom_fonts/font = SubResource( 20 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Username" type="LineEdit" parent="Settings_panel"]
anchor_left = 0.104679
anchor_top = 0.196393
anchor_right = 1.02573
anchor_bottom = 0.274937
margin_left = -28.756
margin_top = 19.4828
margin_right = -28.756
margin_bottom = 19.4828
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = SubResource( 24 )
align = 1
placeholder_text = "Enter Username"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpinBox" type="SpinBox" parent="Settings_panel"]
margin_left = 297.0
margin_top = 180.0
margin_right = 399.0
margin_bottom = 219.0
max_value = 60.0
suffix = "Minutes"

[node name="Rocket Man3" type="Label" parent="Settings_panel"]
anchor_left = 0.0308483
anchor_top = 1.53682
anchor_right = 0.643288
anchor_bottom = 1.61345
margin_left = 11.1054
margin_top = -620.22
margin_right = 11.1054
margin_bottom = -620.22
custom_colors/font_color = Color( 0.92549, 0.478431, 0.164706, 1 )
custom_fonts/font = SubResource( 25 )
text = "Round time:"
valign = 1
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Players_panel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -261.0
margin_right = 418.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 91, 168 )

[node name="Rocket Man2" type="Label" parent="Players_panel"]
anchor_left = 0.0287081
anchor_top = 0.0325671
anchor_right = 0.95933
anchor_bottom = 0.224138
custom_colors/font_color = Color( 0.92549, 0.478431, 0.164706, 1 )
custom_fonts/font = SubResource( 26 )
text = "Players:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="ItemList" type="ItemList" parent="Players_panel"]
margin_left = 24.0
margin_top = 115.0
margin_right = 393.0
margin_bottom = 489.0
focus_mode = 0
custom_fonts/font = SubResource( 27 )
same_column_width = true

[node name="Game_panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -418.0
margin_top = -261.0
margin_bottom = 261.0

[node name="Create_button" type="Button" parent="Game_panel"]
anchor_left = 0.143541
anchor_top = 0.126437
anchor_right = 0.88756
anchor_bottom = 0.312261
margin_left = 3.99987
margin_top = -0.000106812
margin_right = 3.99988
margin_bottom = -0.000106812
focus_mode = 0
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 9 )
enabled_focus_mode = 0
text = "Create"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Join_button" type="Button" parent="Game_panel"]
anchor_left = 0.15311
anchor_top = 0.321839
anchor_right = 0.88756
anchor_bottom = 0.501916
margin_left = 3.8147e-06
margin_right = 4.0
margin_bottom = 3.0
focus_mode = 0
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
enabled_focus_mode = 0
text = "Join"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="LineEdit" type="LineEdit" parent="Game_panel"]
anchor_left = 0.0478469
anchor_top = 0.547893
anchor_right = 0.9689
anchor_bottom = 0.626437
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "enter ip address"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit_button" type="Button" parent="Game_panel"]
anchor_left = 0.699219
anchor_top = 0.705555
anchor_right = 0.94375
anchor_bottom = 0.81389
margin_left = -220.273
margin_top = 50.7
margin_right = -30.4874
margin_bottom = 51.1497
focus_mode = 0
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
enabled_focus_mode = 0
text = "exit"

[node name="Back" type="Button" parent="."]
anchor_left = 0.003125
anchor_top = 0.00833333
anchor_right = 0.140625
anchor_bottom = 0.0694444
margin_top = -4.76837e-07
margin_bottom = -3.8147e-06
focus_mode = 0
custom_colors/font_color = Color( 0.568627, 0, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 9 )
enabled_focus_mode = 0
text = "back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start_button" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.5
margin_top = -138.0
margin_right = 155.5
margin_bottom = -16.0
focus_mode = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 30 )
custom_styles/disabled = SubResource( 31 )
custom_styles/normal = SubResource( 32 )
enabled_focus_mode = 0
text = "start Game"

[node name="Info_Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -641.0
margin_top = -64.0
margin_right = 639.0
margin_bottom = -33.0
custom_fonts/font = SubResource( 33 )
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
"anims/Enter a username" = SubResource( 34 )
anims/RESET = SubResource( 35 )
"anims/Server Disconnected" = SubResource( 37 )
anims/connection_failed = SubResource( 36 )

[connection signal="text_changed" from="Settings_panel/Username" to="." method="_on_Username_text_changed"]
[connection signal="pressed" from="Game_panel/Create_button" to="." method="_on_Create_button_pressed"]
[connection signal="pressed" from="Game_panel/Join_button" to="." method="_on_Join_button_pressed"]
[connection signal="text_changed" from="Game_panel/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Game_panel/Exit_button" to="." method="_on_Exit_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Start_button" to="." method="_on_Start_button_pressed"]
